<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.employee.AddEmployee">
        <TextView
            android:id="@+id/text_add_service"
            android:layout_width="216dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="284dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/menu_add_site"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textColorHint="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextSite"
            android:layout_width="311dp"
            android:layout_height="64dp"
            android:layout_marginBottom="332dp"
            android:hint="@string/veuillez_ajouter_un_site"
            android:textColor="#000000"
            android:textColorHint="#000000"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonSendFormSite"
            android:layout_width="255dp"
            android:layout_height="51dp"
            android:contentDescription="@string/sendform"
            android:src="@drawable/baseline_add_24"
            android:textColorHint="@color/white" />

    </LinearLayout>
</ScrollView>