...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contactRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
...
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/fragment_container1"
        app:layout_constraintVertical_bias="0.38"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:ignore="HardcodedText,UnknownIdInLayout"
        android:id="@+id/imageViewVisitor"/>

    <Button
        android:id="@+id/button_search_employee_visitor"
        android:layout_width="78dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
...
