...
        android:layout_marginTop="22dp"
        android:layout_marginEnd="101dp"
        android:drawableEnd="@drawable/baseline_edit_24"
        android:contentDescription="edit"/>

    <Button
        android:id="@+id/employee_button_delete"
        android:layout_width="66dp"
        android:layout_height="62dp"
        android:layout_alignBottom="@+id/materialToolbar2"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="23dp"
...
