...
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Déconnexion</string>

    <string name="menu_homeview">Admin View</string>
    <string name="menu_add_employee">Ajouter un employé</string>
    <string name="menu_search_employee">Rechercher un employé</string>
    <string name="menu_add_service">Ajouter un service</string>
    <string name="menu_search_service">Rechercher un service</string>
    <string name="menu_add_site">Ajouter un site</string>
    <string name="menu_search_site">Rechercher un site</string>
    <string name="name">Nom</string>
    <string name="firstname">Prénom</string>
...
