...
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="HardcodedText" />


    <Button
        android:id="@+id/button_search_employee"
        android:layout_width="78dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="220dp"
        android:contentDescription="@string/searchemployee"
        android:drawableEnd="@drawable/baseline_search_25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_sort_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="112dp"
        android:contentDescription="@string/sortemployee"
        android:drawableEnd="@drawable/baseline_sort_24"
...
